fix gap between sidebars and navbar

--- a/app/assets/stylesheets/hera/variables.scss
+++ b/app/assets/stylesheets/hera/variables.scss
@@ -33,7 +33,7 @@ $instance-nav-bg: $brand-200;
 $instance-nav-border: $brand-400;
 $instance-nav-hover: $brand-900;
 $instance-nav-links: $brand-800;
-$navbar-height: 3.375rem;
+$navbar-height: 3.2rem;
 
 // Sidebar
 $sidebar-width: 14rem;
